# dustrown

./: AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
docs/: malicious-markdown-demo.md  security-threat-model.md
src/: core.rs  linux.rs  main.rs  windows.rs  windows_shared.rs
tests/fixtures/markdown/: basic.md  table-tasklist.md  unsafe.md
