[package]
name = "dustrown"
version = "0.1.0"
edition = "2024"

[dependencies]
ammonia = "4"
dark-light = "1"
html-escape = "0.2"
pulldown-cmark = "0.13"
syntect = "5"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.15"
tao = "0.34"
wry = "0.53"
